@@ -52,6 +52,7 @@ struct ec_sdo_request {
     uint8_t *data; /**< Pointer to SDO data. */
     size_t mem_size; /**< Size of SDO data memory. */
     size_t data_size; /**< Size of SDO data. */
+    uint8_t complete_access; /**< SDO shall be transferred completely. */
     uint32_t issue_timeout; /**< Maximum time in ms, the processing of the
                               request may take. */
     uint32_t response_timeout; /**< Maximum time in ms, the transfer is
